[package]
name = "arbiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
log = "0.4.20"
serde = "1.0.196"
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3.6"
