[package]
name = "arbiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
log = "0.4.20"
rusqlite = "0.30.0"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
warp = "0.3.6"
